@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Opening/closing sub-menus has now a delay. It can be controlled via IGUIEnvironment::setMenuShowDelay.
 - Add new flag to IMeshSceneNode::setMesh to allow to keeping the original node materials.
 - New ETCF_ALLOW_MEMORY_COPY texture creation flag makes having an extra texture copy for OpenGL textures optional.
   This is now disabled by default. It saves a lot memory, but the cost is that lock() calls get slower.
